[gd_scene load_steps=7 format=3 uid="uid://c6acoj3awhcs5"]

[ext_resource type="Script" uid="uid://cn3wugrrr4eea" path="res://Scripts/test_node.gd" id="1_ylgs7"]
[ext_resource type="PackedScene" uid="uid://cn608h0uv81g6" path="res://Scenes/focus_item_scene.tscn" id="2_2boku"]
[ext_resource type="PackedScene" uid="uid://c411v8jfiphlo" path="res://Scenes/button_left_scene.tscn" id="3_k16tl"]
[ext_resource type="PackedScene" uid="uid://nt346hojr4fx" path="res://Scenes/button_right_scene.tscn" id="4_6dtr0"]
[ext_resource type="PackedScene" uid="uid://o8plrju4600a" path="res://Scenes/button_up_scene.tscn" id="5_bnw5s"]
[ext_resource type="PackedScene" uid="uid://bu0b1ia4kw37q" path="res://Scenes/button_down_scene.tscn" id="6_vbd8y"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ylgs7")

[node name="FocusItem" parent="." instance=ExtResource("2_2boku")]
position = Vector2(577.75006, 323.25003)

[node name="DirectionButtons" type="CanvasGroup" parent="."]

[node name="ButtonLeft" parent="DirectionButtons" instance=ExtResource("3_k16tl")]

[node name="ButtonRight" parent="DirectionButtons" instance=ExtResource("4_6dtr0")]

[node name="ButtonUp" parent="DirectionButtons" instance=ExtResource("5_bnw5s")]

[node name="ButtonDown" parent="DirectionButtons" instance=ExtResource("6_vbd8y")]
